fixed issue #11 - color contrast

--- a/src/scss/_custom-css.scss
+++ b/src/scss/_custom-css.scss
@@ -29,6 +29,10 @@ h6,
     }
 }
 
+a {
+    color: #0079c9;
+}
+
 @media print {
     * {
         color: black;
